# pince

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md
agent/: auth.py  codec.py  conftest.py  pyproject.toml  requirements.txt  test_codec.py
agent/pince_agent/: __init__.py  __main__.py  agent.py  anthropic_client.py  protocol.py
agent/pince_proto/: __init__.py  agent_pb2.py  frontend_pb2.py
agent/tests/: conftest.py  test_agent_loop.py  test_protocol.py
assets/: architecture.excalidraw
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/permission-engine/: Cargo.toml
crates/permission-engine/src/: engine.rs  lib.rs  policy.rs  reload.rs  session.rs
crates/permission-engine/src/tests/: eval_tests.rs  merge_tests.rs  policy_parse_tests.rs  reload_tests.rs  session_tests.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/src/: agent.rs  auth.rs  codec.rs  frontend.rs  frontend_tests.rs  lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: config.rs  error.rs  firecracker.rs  lib.rs  manager.rs  mock.rs  protocol.rs  runner.rs  vsock.rs
crates/sandbox/src/guest/: main.rs  tools.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: config.rs  lib.rs  runner.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs  path_guard.rs  resolver.rs  store.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: agent_handle.rs  audit.rs  config.rs  health.rs  lib.rs  main.rs  secrets_injection.rs  spawn.rs  supervisor.rs
crates/supervisor/tests/: integration.rs
crates/tool-registry/: Cargo.toml
crates/tool-registry/src/: config.rs  lib.rs  registry.rs  schema.rs  validate.rs
crates/tool-registry/src/builtin/: feedback.rs  list_files.rs  mod.rs  read_file.rs  shell_exec.rs  write_file.rs
crates/tool-registry/src/mcp/: client.rs  loader.rs  mod.rs  proxy.rs
crates/tool-registry/src/memory/: manager.rs  mod.rs  qmd.rs  tools.rs  types.rs
crates/tool-registry/tests/: builtin_tests.rs  config_tests.rs  feedback_tests.rs  mcp_tests.rs  memory_tests.rs
denv/: Dockerfile  docker-compose.base.yml  docker-compose.coord.yml  docker-compose.worker.yml
proto/: agent.proto  frontend.proto
scripts/: gen_proto.sh
