[project]
name = "pince-agent"
version = "0.1.0"
description = "Pince sub-agent: Python LLM interaction process"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.47.0",
    "protobuf>=4.21",
]

[project.scripts]
pince-agent = "pince_agent.__main__:main_sync"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "."]
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
