[package]
name = "permission-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
