[package]
name = "pince-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
prost = "0.13"
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "net"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "net", "macros", "rt", "rt-multi-thread"] }

[build-dependencies]
prost-build = "0.13"
