[package]
name = "pince-sandbox"
version.workspace = true
edition.workspace = true

[lib]
name = "pince_sandbox"
path = "src/lib.rs"

[[bin]]
name = "pince-guest-agent"
path = "src/guest/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
