[package]
name = "tool-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
secrets = { path = "../secrets" }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
mockito = { workspace = true }
